[gd_scene load_steps=6 format=3 uid="uid://dg6ubsrb4rl03"]

[ext_resource type="Script" uid="uid://86j6gxmnko71" path="res://scripts/level 3/drawer_bedside.gd" id="1_327f7"]
[ext_resource type="Texture2D" uid="uid://hdfd77wlm68p" path="res://assets/level 3/textures/Wardrobe.atlastex" id="1_vmci1"]
[ext_resource type="PackedScene" uid="uid://bg5u0ru0atlxd" path="res://scenes/level 3/trigger.tscn" id="3_yh8cc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5ql5"]
size = Vector2(35, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy0sh"]
size = Vector2(36, 20)

[node name="Drawer" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("1_327f7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, -8.5)
shape = SubResource("RectangleShape2D_h5ql5")

[node name="Wardrobe" type="Sprite2D" parent="."]
position = Vector2(3.3999999, -5)
scale = Vector2(0.7749999, 0.6)
texture = ExtResource("1_vmci1")
region_rect = Rect2(0, 0, 48, 40)

[node name="Wardrobe2" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.9999962, -0.5000019)
scale = Vector2(0.79166675, 0.483871)
texture = ExtResource("1_vmci1")
region_enabled = true
region_rect = Rect2(0, 8.171834, 48, 31.828167)

[node name="Wardrobe3" type="Sprite2D" parent="."]
visible = false
position = Vector2(3.125, -10.250002)
scale = Vector2(0.7864583, 0.51923066)
texture = ExtResource("1_vmci1")
region_enabled = true
region_rect = Rect2(0, 0, 48.29502, 26.446436)

[node name="trigger" parent="." instance=ExtResource("3_yh8cc")]
position = Vector2(1, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_cy0sh")

[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_exited" from="trigger" to="." method="_on_trigger_body_exited"]
